backend-autoscaler.yml
apiVersion: v1
kind: Namespace
metadata:
  name: smart-home-app
